added active states for menu links

--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
       <div class="contain">
         <a href="#home" class="branding" data-scroll data-speed="500" data-easing="easeInOutCubic" data-url="true"><img src="assets/branding.png"></a>
         <ul class="main-nav" data-scroll-header>
-          <li><a href="#team" data-scroll data-speed="500" data-easing="easeInOutCubic" data-url="true">Dave &amp; the Team</a></li>
+          <li><a id="nav-team" href="#team" data-scroll data-speed="500" data-easing="easeInOutCubic" data-url="true">Dave &amp; the Team</a></li>
           <li>|</li>
-          <li><a href="#services" data-scroll data-speed="500" data-easing="easeInOutCubic" data-url="true">Services</a></li>
+          <li><a id="nav-services" href="#services" data-scroll data-speed="500" data-easing="easeInOutCubic" data-url="true">Services</a></li>
           <li>|</li>
-          <li><a href="#join" data-scroll data-speed="500" data-easing="easeInOutCubic" data-url="true">Join Us</a></li>
+          <li><a id="nav-join" href="#join" data-scroll data-speed="500" data-easing="easeInOutCubic" data-url="true">Join Us</a></li>
           <li>|</li>
-          <li><a href="#contact" data-scroll data-speed="500" data-easing="easeInOutCubic" data-url="true">Contact Us</a></li>
+          <li><a id="nav-contact" href="#contact" data-scroll data-speed="500" data-easing="easeInOutCubic" data-url="true">Contact Us</a></li>
         </ul>
       </div>
     </header>
     <div class="container">
-      <div class="section-home snap">
+      <div class="section-home">
         <a name="home" id="home"></a>
         <h1><div class="contain">Antibe Resources Ltd</div></h1>
 
@@ -55,7 +55,7 @@
       </div>
       <div class="section-team">
         <a name="team" id="team"></a>
-        <h2 class="section-marker snap"><div class="contain">Dave &amp; the Team</div></h2>
+        <h2 class="section-marker"><div class="contain">Dave &amp; the Team</div></h2>
         <div class="contain">
           <p class="announce">We are a network of highly experienced professionals covering a wide-range of roles, who are matched to each project based on its needs. Our primary team is built from a group of people who have many years of previous experience working together on diverse projects and who all believe in delivering excellence through collaboration and trust.</p>
 
@@ -82,7 +82,7 @@
 
       <div class="section-services">
         <a name="services" id="services"></a>
-        <h2 class="section-marker snap"><div class="contain">Services</div></h2>
+        <h2 class="section-marker"><div class="contain">Services</div></h2>
         <div class="contain">
           <p class="announce-big">Antibe is a group of experienced resources specializing in</p>
 
@@ -122,7 +122,7 @@
 
       <div class="section-join">
         <a name="join" id="join"></a>
-        <h2 class="section-marker snap"><div class="contain">Join Us</div></h2>
+        <h2 class="section-marker"><div class="contain">Join Us</div></h2>
         <div class="contain">
           <p class="announce">Our vision is not only to deliver excellence to our clients, but also to provide an environment for skilled, experienced professionals to work together in a flexible environment on large-scale, exciting projects.</p>
 
@@ -160,7 +160,7 @@
 
       <div class="section-contact">
         <a name="contact" id="contact"></a>
-        <h2 class="section-marker snap"><div class="contain">Contact Us</div></h2>
+        <h2 class="section-marker"><div class="contain">Contact Us</div></h2>
         <div class="contain">
           <p class="announce-big">If you are a a service provider or client organization looking for project delivery support, or if you are a contractor looking for exciting work opportunities, please contact us at:</p>
 
