google plus link

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 
           <a href="mailto:info@antibe.com" class="big-link-btn"><i>&#xf003;</i> info@antibe.com</a>
           <a href="http://www.linkedin.com/company/antibe-resources-ltd-" class="big-link-btn"><i>&#xf0e1;</i> /company/antibe-resources-ltd</a>
+          <a href="https://plus.google.com/117473405488972704721" class="big-link-btn" rel="author"><i>&#xf0d5;</i> Google +</a>
 
           <div style="height: 250px;"></div>
 
