added blog link

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
           <li><a id="nav-join" href="#join" data-scroll data-speed="500" data-easing="easeInOutCubic" data-url="true">Join Us</a></li>
           <li>|</li>
           <li><a id="nav-contact" href="#contact" data-scroll data-speed="500" data-easing="easeInOutCubic" data-url="true">Contact Us</a></li>
+          <li>|</li>
+          <li><a href="http://blog.antibe.com">Blog</a></li>
         </ul>
       </div>
     </header>
