--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <a name="home" id="home"></a>
         <h1><div class="contain">Antibe Resources Ltd</div></h1>
 
-        <div class="tagline"><div class="contain"><p>Mission: to collaborate with and support highly experienced practitioners in order to deliver value-added projects with excellence to our clients.</p></div></div>
+        <div class="tagline"><div class="contain"><p>We are a multi-service consulting agency made up of a group of highly experienced professionals, here to advise on and implement on your most complex projects.</p></div></div>
 
       </div>
       <div class="section-team">
@@ -69,11 +69,37 @@
             </div>
             <div class="resources">
               <ul>
-                <li><div class="img-brace" style="background: url('assets/incognito.jpg'); background-position: top center; background-size: cover;"></div> <span>Project Managers</span></li>
-                <li><div class="img-brace" style="background: url('assets/incognito.jpg'); background-position: top center; background-size: cover;"></div> <span>Architects</span> <br><small>Technical, Application, Enterprise</small></li>
-                <li><div class="img-brace" style="background: url('assets/incognito.jpg'); background-position: top center; background-size: cover;"></div> <span>Consultants</span> <br><small>Business Analysts, Transition Managers, Application Analysts</small></li>
-                <li><div class="img-brace" style="background: url('assets/incognito.jpg'); background-position: top center; background-size: cover;"></div> <span>Specialists</span> <br><small>Business Intelligence, Benefits Realization, Strategy &amp; Change Management</small></li>
-                <li><div class="img-brace" style="background: url('assets/incognito.jpg'); background-position: top center; background-size: cover;"></div> <span>Developers</span> <br><small>Oracle, Java, Microsoft</small></li>
+
+                <li>
+                  <div class="img-brace" style="background: url('assets/incognito.jpg'); background-position: top center; background-size: cover;"></div>
+                  <h4>Project Managers</h4>
+                  <p>Our Project Management depth is significant and crosses many individuals and varying levels of scale and complexity. From Project Management of Technical Infrastructure and Data Centre migrations to Program Management of pan-Canadian Application Implementations, our senior resources bring many years of successful experience.</p>
+                </li>
+
+                <li>
+                  <div class="img-brace" style="background: url('assets/incognito.jpg'); background-position: top center; background-size: cover;"></div>
+                  <h4>Consultants</h4>
+                  <p>Our architect capabilities are focused in several very strong and experienced Architects who have very successfully performed as Enterprise, Application, Solution and Technical Architects. Their many years of experience is often sought in Technical Advisory roles.</p>
+                </li>
+
+                <li>
+                  <div class="img-brace" style="background: url('assets/incognito.jpg'); background-position: top center; background-size: cover;"></div>
+                  <h4>Business Analysts</h4>
+                  <p>Our business Analysts capture and document business requirements through the use of planning sessions, business models, system surveys, etc while also understanding technical systems design, system development and maintenance, package implementation, testing and training.</p>
+                </li>
+
+                <li>
+                  <div class="img-brace" style="background: url('assets/incognito.jpg'); background-position: top center; background-size: cover;"></div>
+                  <h4>Consultants</h4>
+                  <p>Our Consultants include Technical and Systems Analysts as well as Developers across several technologies. Some areas of expertise include ASD/ Outsourcing, Business and Market Analysis, Business Process Improvement, and Organizational Design. Technical focus includes Java and Oracle technologies and applications.</p>
+                </li>
+
+                <li>
+                  <div class="img-brace" style="background: url('assets/incognito.jpg'); background-position: top center; background-size: cover;"></div>
+                  <h4>Developers</h4>
+                  <p>Many of our practitioners have gained the knowledge and experience to be considered an expert or specialist in their field, either industry focused, such as in Healthcare or LNG/Oil &amp; Gas, or skills focused, such asin Business Intelligence or Benefits Realization. These resources function as Consultants, Project Leaders, Analysts or even Advisors in the delivery of their specialty skills.</p>
+                </li>
+
               </ul>
             </div>
             <div class="clear"></div>
