--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/ico" href="assets/favicon.ico">
     <title>Antibe Resources Ltd</title>
+    <meta name="google-site-verification"  content="VVP1edPX71kk8YWkaPeGZhkwCcK5cuofczzHQUcV-Wc">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Antibe Resources">
