--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <li>
                   <div class="img-brace" style="background: url('assets/incognito.jpg'); background-position: top center; background-size: cover;"></div>
-                  <h4>Consultants</h4>
+                  <h4>Architects</h4>
                   <p>Our architect capabilities are focused in several very strong and experienced Architects who have very successfully performed as Enterprise, Application, Solution and Technical Architects. Their many years of experience is often sought in Technical Advisory roles.</p>
                 </li>
 
@@ -97,8 +97,8 @@
 
                 <li>
                   <div class="img-brace" style="background: url('assets/incognito.jpg'); background-position: top center; background-size: cover;"></div>
-                  <h4>Developers</h4>
-                  <p>Many of our practitioners have gained the knowledge and experience to be considered an expert or specialist in their field, either industry focused, such as in Healthcare or LNG/Oil &amp; Gas, or skills focused, such asin Business Intelligence or Benefits Realization. These resources function as Consultants, Project Leaders, Analysts or even Advisors in the delivery of their specialty skills.</p>
+                  <h4>Specialists</h4>
+                  <p>Many of our practitioners have gained the knowledge and experience to be considered an expert or specialist in their field, either industry focused, such as in Healthcare or LNG/Oil &amp; Gas, or skills focused, such asin  Business Intelligence or Benefits Realization. These resources function as Consultants, Project Leaders, Analysts or even Advisors in the delivery of their specialty skills.</p>
                 </li>
 
               </ul>
